--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       rel="stylesheet"
     />
 
+    <!-- === Favicon === -->
+    <link rel="shortcut icon" href="./img/icon-logo.png" type="image/x-png" />
+
     <!-- === CSS === -->
     <link rel="stylesheet" href="main.css" />
     <title>Dashboard Sidebar Menu | Dark-light Mode</title>
@@ -105,6 +108,10 @@
         </div>
       </div>
     </nav>
+
+    <section class="home">
+      <div class="text">Dashboard</div>
+    </section>
 
     <script src="./main.js"></script>
   </body>
